tests/syntax/error_init_list1.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_init_list1.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_init_list1.silly:8:1: error: For variable 'w', more initializers (3) specified than number of elements (1).
// CHECK:     8 | INT32 w {1,2,3};
// CHECK:       | ^


INT32 w {1,2,3};
